--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "eslint": "^9.34.0",
     "globals": "^16.3.0",
     "nodemon": "^3.1.10"
+  },
+  "dependencies": {
+    "express": "^5.1.0"
   }
 }
